--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -25,6 +25,8 @@
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
+
+    "types": ["vite/client", "node"]
   },
   "include": ["src"]
 }
